/*
 * Licensed to the Apache Software Foundation (ASF) under one or more
 * contributor license agreements.  See the NOTICE file distributed with
 * this work for additional information regarding copyright ownership.
 * The ASF licenses this file to You under the Apache License, Version 2.0
 * (the "License"); you may not use this file except in compliance with
 * the License.  You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
package de.cuioss.nifi.rest.handler;

/**
 * Lifecycle status of an asynchronously processed request.
 * <p>
 * Valid transitions:
 * <ul>
 *   <li>ACCEPTED → PROCESSING → PROCESSED</li>
 *   <li>ACCEPTED → PROCESSING → REJECTED</li>
 *   <li>ACCEPTED → PROCESSING → RETRY → PROCESSING</li>
 *   <li>ACCEPTED → PROCESSING → ERROR</li>
 *   <li>COLLECTING_ATTACHMENTS → PROCESSING → PROCESSED/REJECTED/ERROR</li>
 * </ul>
 */
public enum RequestStatus {
    ACCEPTED,
    COLLECTING_ATTACHMENTS,
    PROCESSING,
    PROCESSED,
    REJECTED,
    RETRY,
    ERROR
}
